@@ -1,3 +1,10 @@
+2010-07-07  Anders Carlsson  <andersca@apple.com>
+
+        Try to fix the Windows build.
+
+        * runtime/Collector.cpp:
+        (JSC::Heap::freeBlocks):
+
 2010-07-07  Darin Adler  <darin@apple.com>
 
         Reviewed by Adam Barth.
